Fixed Button Layout
Previous width percentage (10%) made everything too small. Increased
the amount to 50%.

--- a/TVRS.css
+++ b/TVRS.css
@@ -5,7 +5,7 @@ body{
 	margin:0;
 }
 #container{
-	width:10%;
+	width:50%;
 	margin-left: auto;
 	margin-right: auto;
 }
